# overwatch_cacs_dumper

./: .gitignore  .gitmodules  README.md
.github/workflows/: pages.yml
casc_reader/: CascReader.csproj  Program.cs
casc_reader/crypto/: ProCMF_148494.cs  ProTRG_148494.cs
docs/: _config.yml  entities.html  heroes.html  index.html  overrides.html  overrides_statevars.csv  sdk.html  statevars.html
docs/css/: style.css
docs/data/: entities.json  heroes.json  herokits.json  statevars.json  summary.json  var_usage.json  weapons.json
docs/js/: app.js
docs/sdk/: abilitydump.hpp  herokitdump.hpp  namedump.hpp
keydump_dll/: CMakeLists.txt  keydump.cpp
output/: entitydump.hpp  hero_data_gen.hpp  known_hashes.json  statevardump.hpp  var_data_gen.hpp  vars.csv  weapondump.hpp
output/dump_json/: heroes.json  identifier_names.json  loadouts.json
scripts/: build_pages.py  generate_gameplay.py  generate_sdk.py  generate_sdk_v2.py
scripts/overrides/: entities.csv  heroes.csv
